# next-butler

./: .gitignore  Cargo.toml  README.md  build.rs  nextbutler.json  output.txt
nextbutlerbak/templates/pages/: my-super-template.tsx.tt  testtemplate
src/: build.rs  config_reader.rs  constants.rs  lib.rs  main.rs  react_extension.rs  tests.rs
src/app/superapp/: page.jsx
src/base_config/: mod.rs
src/commands/: help_command.rs  mod.rs  new_command.rs
src/commands/command_error/: mod.rs
src/commands/help_command/: mod.rs
src/commands/init_command/: mod.rs
src/commands/new_command/: components.rs  mod.rs  new_command_config.rs  new_comp.rs  new_page.rs  new_style.rs  pages.rs  styles.rs  templates.rs
src/commands/new_command/new_comp/: final_new_comp_config.rs  mod.rs
src/commands/new_command/new_page/: final_new_page_config.rs  mod.rs
src/commands/new_command/new_style/: final_new_style_config.rs  mod.rs
src/commands/rm_command/: mod.rs
src/components/navbars/: main.navbar.tsx
src/helpers/: cli_helper.rs  file_helper.rs  mod.rs  str_helper.rs  template_helper.rs  utils.rs
src/json_config/: mod.rs  new_component_config.rs  new_page_config.rs  new_style_config.rs
src/styles/users/: main.navbar.scss
src/template/: default_templates.rs  mod.rs  template_variables.rs
src/tests/new_command/: mod.rs  pages.rs
src/user_config/: mod.rs
templates/: component.tt  page.tt
tests/: page_creation_options.rs
tests/integration_tests/: basic_page_creations.rs
