[package]
name = "next-butler"
version = "0.2.0"
authors = ["Juan Cruz Montiel juancruzmontielar@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to help you delevop your Next.js project easier and faster."
readme = "README.md"
homepage = "https://github.com/TatuMon/next-butler"
repository = "https://github.com/TatuMon/next-butler"
keywords = ["nextjs", "js", "ts", "tool", "cli"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.5", features = ["help", "suggestions", "error-context", "color"] }
path-clean = "1.0.1"
regex = "1.8.1"
convert_case = "0.6.0"
assert_cmd = "2.0.12"

[profile.test]
debug = true
