[package]
name = "next-butler"
version = "1.0.0"
authors = ["Juan Cruz Montiel tatumonar@proton.me"]
license = "MIT OR Apache-2.0"
description = "A tool to help you delevop your Next.js project easier and faster."
readme = "README.md"
homepage = "https://github.com/TatuMon/next-butler"
repository = "https://github.com/TatuMon/next-butler"
keywords = ["nextjs", "js", "react", "tool", "cli"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["help", "suggestions", "error-context", "color"] }
path-clean = "1"
regex = "1"
convert_case = "0"
assert_cmd = "2"
colored = "2"
indoc = "2"
console = "0.15.8"
unicode-ident = "1.0.12"
handlebars = "5.1.2"

[profile.test]
debug = true

[[bin]]
name = "nb"
path = "src/main.rs"
